[gd_scene load_steps=65 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://art/characters/player.png" type="Texture" id=2]
[ext_resource path="res://Scripts/player_hitbox.gd" type="Script" id=3]
[ext_resource path="res://esc menu button.png" type="Texture" id=4]
[ext_resource path="res://Scenes/ColorRect.gd" type="Script" id=5]
[ext_resource path="res://joystix/joystix monospace.otf" type="DynamicFontData" id=6]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 0, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 48, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 96, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 144, 384, 48, 48 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 48, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 96, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 144, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 192, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 240, 48, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 48, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 96, 432, 48, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 48, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 96, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 144, 288, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 48, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 192, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 240, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 0, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 48, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 96, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 144, 336, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 48, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 96, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 144, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 192, 192, 48, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 240, 192, 48, 48 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "BackIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Backattack",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Backwalk",
"speed": 5.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Death",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "FrontIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "Frontattack",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Frontwalk",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ) ],
"loop": true,
"name": "SideIdle",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "Sideattack",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "Sidewalk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=26]
height = 10.0

[sub_resource type="CircleShape2D" id=54]
radius = 14.0

[sub_resource type="Theme" id=55]

[sub_resource type="StyleBoxFlat" id=56]
bg_color = Color( 0.109804, 0.854902, 0.0862745, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=57]
bg_color = Color( 0.0705882, 0.12549, 0.945098, 1 )
border_width_left = 7
border_width_top = 7
border_width_right = 7
border_width_bottom = 7
border_color = Color( 0.8, 0.8, 0.8, 0 )

<<<<<<< Updated upstream
[sub_resource type="DynamicFont" id=58]
size = 43
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="playernodes" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
=======
[node name="Player" type="KinematicBody2D"]
>>>>>>> Stashed changes
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -6 )
frames = SubResource( 25 )
animation = "SideIdle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( -0.882068, 0.769021 )
shape = SubResource( 26 )

[node name="player_hitbox" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource( 54 )

[node name="slimeCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="playerAttack" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="playerhealth" type="ProgressBar" parent="."]
margin_left = -254.0
margin_top = -148.0
margin_right = 56.0
margin_bottom = -116.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 55 )
custom_styles/fg = SubResource( 56 )
percent_visible = false

[node name="playerMana" type="ProgressBar" parent="."]
margin_left = -254.0
margin_top = -132.0
margin_right = 56.0
margin_bottom = -100.0
rect_scale = Vector2( 0.5, 0.5 )
theme = SubResource( 55 )
custom_styles/fg = SubResource( 57 )
percent_visible = false

[node name="playerRegen" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="ManaTimer" type="Timer" parent="."]
wait_time = 0.02
autostart = true

<<<<<<< Updated upstream
[node name="ColorRect" type="ColorRect" parent="Player"]
pause_mode = 2
visible = false
margin_left = -273.0
margin_top = -165.0
margin_right = 272.0
margin_bottom = 163.0
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Player/ColorRect"]
margin_left = 161.0
margin_top = 138.0
margin_right = 394.0
margin_bottom = 198.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 58 )
text = "PAUSED"

[node name="Label2" type="Label" parent="Player/ColorRect"]
margin_left = 161.0
margin_top = 192.0
margin_right = 483.0
margin_bottom = 252.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 58 )
text = "Click esc"

[node name="Button" type="Button" parent="Player"]
self_modulate = Color( 0, 0, 0, 0 )
margin_left = 199.0
margin_top = -141.0
margin_right = 211.0
margin_bottom = -121.0
rect_scale = Vector2( 3.68982, 1.72566 )

[node name="Sprite" type="Sprite" parent="Player/Button"]
position = Vector2( 6.03253, 10.1781 )
scale = Vector2( 0.0235645, 0.0413484 )
z_index = 1000
texture = ExtResource( 4 )

[connection signal="area_entered" from="Player/player_hitbox" to="Player" method="_on_player_hitbox_area_entered"]
[connection signal="area_exited" from="Player/player_hitbox" to="Player" method="_on_player_hitbox_area_exited"]
[connection signal="timeout" from="Player/slimeCooldown" to="Player" method="_on_slimeCooldown_timeout"]
[connection signal="timeout" from="Player/playerAttack" to="Player" method="_on_playerAttack_timeout"]
[connection signal="timeout" from="Player/playerRegen" to="Player" method="_on_playerRegen_timeout"]
[connection signal="timeout" from="Player/ManaTimer" to="Player" method="_on_Timer_timeout"]
[connection signal="pressed" from="Player/Button" to="Player/ColorRect" method="_on_Button_pressed"]
=======
[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="area_exited" from="player_hitbox" to="." method="_on_player_hitbox_area_exited"]
[connection signal="timeout" from="slimeCooldown" to="." method="_on_slimeCooldown_timeout"]
[connection signal="timeout" from="playerAttack" to="." method="_on_playerAttack_timeout"]
[connection signal="timeout" from="playerRegen" to="." method="_on_playerRegen_timeout"]
[connection signal="timeout" from="ManaTimer" to="." method="_on_Timer_timeout"]
>>>>>>> Stashed changes
